@@ -181,7 +181,6 @@
         </nav>
 
         <!-- Add new car -->
-        <br><br><br>
         <div class="container mb-4">
             <div class="row mb-3">
                 <div class="col-12">
@@ -199,10 +198,10 @@
                     </select>
                     <input class="form-control form-input-item" type="text" placeholder="Inserisci il modello" aria-label="default input example" id="input-model">
                     <h5 class="form-input-section">Fascia</h5>
-                    <label for="customRange3" class="form-label form-input-item">Potenza</label>
+                    <label for="customRange3" class="form-label form-input-item d-flex justify-content-between align-items-center">Potenza <span class="range-value" id="output-power"></span></label>
                     <input type="range" class="form-range form-input-item" min="30" max="400" step="10" id="input-power">
-                    <label for="customRange3" class="form-label form-input-item">Prezzo</label>
-                    <input type="range" class="form-range form-input-item" min="10000" max="200000" step="1000" id="input-price">
+                    <label for="customRange3" class="form-label form-input-item d-flex justify-content-between align-items-center">Prezzo <span class="range-value" id="output-price"></span></label>
+                    <input type="range" class="form-range form-input-item" min="5000" max="200000" step="1000" id="input-price">
                     <h5 class="form-input-section">Alimentazione</h5>
                     <div class="input-group mb-3 form-input-item">
                         <select class="form-select" aria-label="Example select with button addon" id="choice-engine">
@@ -449,7 +448,7 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-12 errorContainer" id="addCarError">
+                <div class="col-12 error-container" id="add-car-error">
                 </div>
             </div>
         </div>
@@ -482,7 +481,7 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-12 errorContainer" id="addBrandError">
+                <div class="col-12 error-container" id="add-brand-error">
                 </div>
             </div>
         </div>
@@ -498,13 +497,13 @@
                 <div class="col-12">
                     <input class="form-control form-input-item" type="text" placeholder="Inserisci il nome dell'optional" aria-label="default input example" id="inputOptionalName">
                     <label for="exampleFormControlTextarea1" class="form-label form-input-item">Descrizione</label>
-                    <textarea class="form-control" id="inputOptionalDescription" rows="3"></textarea><br>
+                    <textarea class="form-control" id="input-optional-description" rows="3"></textarea><br>
                     <label for="customRange3" class="form-label form-input-item">Prezzo</label><br>
                     <input type="range" class="form-range form-input-item" min="50" max="5000" step="20" id="inputOptionalPrice">
                 </div>
             </div>
             <div class="row">
-                <div class="col-12 errorContainer" id="addOptionalError">
+                <div class="col-12 error-container" id="add-optional-error">
                 </div>
             </div>
         </div>
@@ -561,5 +560,7 @@
         <link rel="stylesheet" type="text/css" href="../../css/style.css">
         <!-- Add js scripts -->
         <script src="../../bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+        <script type="module" src="../../js-frontend/pagination.js"></script>
+        <script type="module" src="../../js-frontend/print-sliders_admin-add-items.js"></script>
     </body>
 </html>
