@@ -199,9 +199,9 @@
                     <label for="customRange3" class="form-label form-input-item d-flex justify-content-between align-items-center">Potenza massima <span class="range-value" id="output-max-power"></span></label>
                     <input type="range" class="form-range form-input-item" min="30" max="400" step="10" id="input-max-power">
                     <label for="customRange3" class="form-label form-input-item d-flex justify-content-between align-items-center">Prezzo minimo <span class="range-value" id="output-min-price"></span></label>
-                    <input type="range" class="form-range form-input-item" min="10000" max="200000" step="1000" id="input-min-price">
+                    <input type="range" class="form-range form-input-item" min="5000" max="200000" step="1000" id="input-min-price">
                     <label for="customRange3" class="form-label form-input-item d-flex justify-content-between align-items-center">Prezzo massimo <span class="range-value" id="output-max-price"></span></label>
-                    <input type="range" class="form-range form-input-item" min="10000" max="200000" step="1000" id="input-max-price">
+                    <input type="range" class="form-range form-input-item" min="5000" max="200000" step="1000" id="input-max-price">
 
                     <h5 class="form-input-section">Alimentazione</h5>
                     <div class="input-group mb-3 form-input-item">
@@ -457,8 +457,8 @@
                     <h2>Risultati ricerca</h2>
                 </div>
             </div>
-            <div class="row" id="result-section">
-                <div class="col-lg-3 col-md-6 mb-5">
+            <div class="row mb-5" id="result-section">
+                <div class="col-lg-3 col-md-6 mb-0">
                     <div class="d-flex overflow-visible">
                         <div class="card card-zoom me-3" style="width: 18rem;">
                           <img src="../../img/variable/fiat-panda.jfif" class="card-img-top" alt="...">
@@ -483,7 +483,7 @@
                         </div>
                       </div>
                 </div>
-                <div class="col-lg-3 col-md-6">
+                <div class="col-lg-3 col-md-6 mb-0">
                     <div class="d-flex overflow-visible">
                         <div class="card card-zoom me-3" style="width: 18rem;">
                           <img src="../../img/variable/fiat-panda.jfif" class="card-img-top" alt="...">
@@ -508,7 +508,7 @@
                         </div>
                       </div>
                 </div>
-                <div class="col-lg-3 col-md-6">
+                <div class="col-lg-3 col-md-6 mb-0">
                     <div class="d-flex overflow-visible">
                         <div class="card card-zoom me-3" style="width: 18rem;">
                           <img src="../../img/variable/fiat-panda.jfif" class="card-img-top" alt="...">
@@ -533,7 +533,7 @@
                         </div>
                       </div>
                 </div>
-                <div class="col-lg-3 col-md-6">
+                <div class="col-lg-3 col-md-6 mb-0">
                     <div class="d-flex overflow-visible">
                         <div class="card card-zoom me-3" style="width: 18rem;">
                           <img src="../../img/variable/fiat-panda.jfif" class="card-img-top" alt="...">
